Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19030

Unable to display Surrogate Pairs

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Win32SS
    • None

    Description

      A surrogate pair is a UTF-16 code sequence to display one character.
      https://learn.microsoft.com/en-us/previous-versions/windows/desktop/indexsrv/surrogate-pairs

      We cannot display Surrogate Pairs in ReactOS.
      surrogate-pairs-ReactOS-unable-to-display.png

      The surrogate pairs are supported in Windows Vista+ or

      { XP with patch }

      .

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: